2014-06-07  Niels Möller  <nisse@lysator.liu.se>

	* Released nettle-3.0

2014-06-04  Niels Möller  <nisse@lysator.liu.se>

	* NEWS: List des-compat.h as a candidate for removal in the next
	release.

	* testsuite/des-compat-test.c (test_main): Fixed out of bounds
	memory read, reported by Nikos Mavrogiannopoulos.

	* nettle-write.h: Include <stddef.h>, fixing compilation on
	freebsd.

	* aclocal.m4 (ac_stdint): Fixed "unsinged" typo, spotted by Andy
	Goth.

2014-06-01  Niels Möller  <nisse@lysator.liu.se>

	* x86_64/gcm-hash8.asm: Pass correct argument count to W64_EXIT.
	* x86_64/camellia-crypt-internal.asm: Pass correct argument count
	to W64_ENTRY and W64_EXIT.

	* x86_64/machine.m4 [W64_ABI]: Fix for the case of 6 function
	arguments. Also push %rdi unconditionally, and use aligned
	accesses for save and restore %xmm registers (movdqa).

2014-05-31  Niels Möller  <nisse@lysator.liu.se>

	* configure.ac: Check for COFF type directives.
	(ASM_COFF_STYLE): New substituted variable.
	* config.m4.in: Set COFF_STYLE from configure.
	* asm.m4 (PROLOGUE): Use COFF type directive, if enabled by
	configure. Fixes problem with windows dll linking.

	* asm.m4: Deleted unused offsets for struct aes_ctx.

2014-05-28  Niels Möller  <nisse@lysator.liu.se>

	* testsuite/nettle-pbkdf2-test: Delete carriage return characters
	from output.

	* configure.ac (LIBHOGWEED_LIBS): Be explicit and link
	libhogweed.so with libnettle.so, not -lnettle.
	(LIBHOGWEED_LINK): Drop -L. flag, no longer needed, and previously
	not at the correct position in the link command line.

2014-05-27  Niels Möller  <nisse@lysator.liu.se>

	* examples/ecc-benchmark.c: If mpn_sec_powm is available,
	benchmark it, for modinv.
	(bench_modinv_powm): New function.
	(bench_curve): Use it.

2014-05-22  Niels Möller  <nisse@lysator.liu.se>

	From Claudio Bley:
	* Makefile.in ($(des_headers)): Use the EXEEXT_FOR_BUILD.

2014-05-15  Niels Möller  <nisse@lysator.liu.se>

	* NEWS: Updated with library version numbers.