@@ -1,3 +1,7 @@
+2014-06-25  Niels Möller  <nisse@lysator.liu.se>
+
+	* der-iterator.c: Deleted HAVE_LIBGMP conditionals.
+
 2014-06-07  Niels Möller  <nisse@lysator.liu.se>
 
 	* Released nettle-3.0
